--- a/src/vista/Listar.form
+++ b/src/vista/Listar.form
@@ -45,7 +45,7 @@
               <EmptySpace max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
-              <EmptySpace pref="12" max="32767" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
                       <Component id="BtnVoleverListar" min="-2" max="-2" attributes="0"/>
@@ -93,9 +93,9 @@
                 <Column editable="true" title="Apellido" type="java.lang.Object"/>
                 <Column editable="true" title="Celular" type="java.lang.Object"/>
                 <Column editable="true" title="Email" type="java.lang.Object"/>
-                <Column editable="true" title="Sueldo_Bruto" type="java.lang.Object"/>
-                <Column editable="true" title="Estado_Civil" type="java.lang.Object"/>
-                <Column editable="true" title="Nombre_Depto" type="java.lang.Object"/>
+                <Column editable="true" title="SueldoBruto" type="java.lang.Object"/>
+                <Column editable="true" title="EstadoCivil" type="java.lang.Object"/>
+                <Column editable="true" title="NombreDepto" type="java.lang.Object"/>
               </Table>
             </Property>
           </Properties>
@@ -186,11 +186,13 @@
                       </Group>
                   </Group>
                   <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="TxtEstadoCivilListar" pref="99" max="32767" attributes="0"/>
-                      <Component id="TxtEmailListar" max="32767" attributes="0"/>
-                      <Component id="TxtSueldoBrutoListar" max="32767" attributes="0"/>
-                      <Component id="TxtNombreDeptoListar" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                          <Component id="TxtEstadoCivilListar" pref="99" max="32767" attributes="0"/>
+                          <Component id="TxtEmailListar" max="32767" attributes="0"/>
+                          <Component id="TxtSueldoBrutoListar" max="32767" attributes="0"/>
+                      </Group>
+                      <Component id="CmbDeptoListar" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="54" max="-2" attributes="0"/>
               </Group>
@@ -234,8 +236,8 @@
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="TxtCelularListar" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="TxtNombreDeptoListar" alignment="3" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="CmbDeptoListar" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="31" max="32767" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
@@ -362,8 +364,21 @@
             <Property name="text" type="java.lang.String" value="Nombre Depto"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="TxtNombreDeptoListar">
+        <Component class="javax.swing.JComboBox" name="CmbDeptoListar">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="6">
+                <StringItem index="0" value="Elija Departamento"/>
+                <StringItem index="1" value="Informatica"/>
+                <StringItem index="2" value="Redes"/>
+                <StringItem index="3" value="Administraci&#xf3;n"/>
+                <StringItem index="4" value="Finanzas"/>
+                <StringItem index="5" value="Bienestar"/>
+              </StringArray>
+            </Property>
+          </Properties>
           <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
           </AuxValues>
         </Component>
